# does-it-live

./: Readme.md  default.nix  does-it-live.cabal  shell.nix
app/: Main.hs
nix/: docker.nix  hpkgs.nix
scripts/: build-docker.sh  run-docker.sh
src/: DoesItLive.hs
src/DoesItLive/: Build.hs  Hackage.hs  Score.hs  Stackage.hs  Types.hs
test/: Test.hs
